# ambassadors-dao-contracts

./: .gitignore  Cargo.toml  README.md  build.sh  policy.rs  proposals.rs  types.rs  upgrading.md
.github/workflows/: test.yaml
ambassadors-dao/: Cargo.toml  build.sh
ambassadors-dao-factory/: Cargo.toml  build.sh
ambassadors-dao-factory/res/: ambassadors_dao_factory.wasm
ambassadors-dao-factory/src/: factory_manager.rs  lib.rs
ambassadors-dao/res/: ambassadors_dao.wasm
ambassadors-dao/src/: amounts.rs  error.rs  lib.rs  members.rs  payout.rs  policy.rs  proposals.rs  types.rs  upgrade.rs  validation.rs  views.rs  vote.rs
ambassadors-dao/src/payout/: bounty.rs  miscellaneous.rs  mod.rs  proposal.rs  referrals.rs
src/: delegation.rs  lib.rs  payout.rs  policy.rs  proposals.rs  types.rs  upgrade.rs  views.rs  vote.rs
