[package]
name = "ambassadors-dao"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "4.0.0-pre.4", features = ["unstable"] }
near-contract-standards = "4.0.0-pre.4"
hex = "0.4.2"
ran = "0.3.0"
# rand = "0.8.4"
# getrandom = { version = "0.2.4", features = ["js"] }

[dependencies.serde_with]
version = "1.4.0"
